// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter renders filter dropdown 1`] = `
<div
  class="dropdown"
  data-test-id="filter-dropdown"
>
  <button
    aria-expanded="false"
    class="dropdown-toggle btn btn-light"
    id="filter-by-category-button"
    type="button"
  >
    Filter by category
  </button>
</div>
`;

exports[`Filter renders filter options when dropdown is clicked 1`] = `
<div
  class="show dropdown"
  data-test-id="filter-dropdown"
>
  <button
    aria-expanded="true"
    class="dropdown-toggle btn btn-light"
    id="filter-by-category-button"
    type="button"
  >
    Filter by category
  </button>
  <div
    aria-labelledby="filter-by-category-button"
    class="dropdown-menu show"
    x-placement="bottom-start"
  >
    <button
      class="dropdown-item"
      data-rr-ui-dropdown-item=""
      data-test-id="filter-by-bar"
      name="bar"
    >
      bar
    </button>
    <button
      class="dropdown-item"
      data-rr-ui-dropdown-item=""
      data-test-id="filter-by-foo"
      name="foo"
    >
      foo
    </button>
  </div>
</div>
`;
